# opengl-template

./: CMakeLists.txt  Justfile  Makefile  README.md  compile_commands.json  gl  main.cc  shader.frag
.cache/clangd/index/: gl.h.912B4F055F2C47F8.idx  main.cc.AF0098A559E523D1.idx
glad/include/glad/: gl.h
